* Version 0.8.0
  * Optimized workaround for DEP/noexecute problems (flush tlb).
  * Network daemons TAP, Bridged and Slirp runs with process priority high.
  * New: colinux-daemon -p pidFile stores ID of coLinux in file pidFile.
    "colinux-console-fltk|nt -p pidFile" attach the monitor from stored
    ID.  With this mechanism can open a /named/ console without knowing
    the current ID (Process ID).  pidFile will removed on normal shutdown.
  * Added a nice colinux 3D logo image to the "About" box (Nlucas)
  * Kernel has been updated to 2.6.17
    (Thanks to Anders Eriksson for 2.6.13, 2.6.14, 2.6.15)
  * Holds multiple kernel versions in patch series files
    (2.6.12, 2.6.13, 2.6.14, 2.6.15, 2.6.17)
  * Un-/Installer checks a running coLinux before overwrite or remove old
    files.  [Bugs item #1396459, #1549148]
  * Uninstall old colinux with old exefile, path from registry uninstaller
    [Support Requests-1553923]
  * Stop with error, if double defined device (cobd,cofs,eth,exec)
  * Update tapinstall.exe from DDK 3790.1830 (build Mar 24 2005)
  * colinux-debug-daemon: Only connect to driver, if args -s settings.
  * Option "-v level" enable verbose messages and debug prints on console.
  * Leveled debug output to Dbgview.exe (www.sysinternals.com).
    Needs to enable facility/level with colinux-debug-daemon before.
  
* Version 0.7.1
  * colinux-daemon:
    - Obsoleted the use of XML files for configuration.
      XML config files have been removed.  Use the command-line 
      syntax in a name=value per line plain text file instead.  Please
      read syntax from colinux-daemon.txt and view into the file
      example.conf in coLinux install directory.
    - Added support for @ at the command line for passing simple
      configuration files.
    - Added '-k' option to suppress kernel messages on boot. This should
      let you watch other daemon's output more easily.
    - Incrase the maximum numbers of monitors from 16 to 64.