@@ -11,4 +11,3 @@ while 1:
     if len(data) == 0:
 	break    
     log.write(data)
-2
